--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <!-- Bootstrap CSS -->
+    <!-- build:css css/main.css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link href="css/styles.css" rel="stylesheet">
+    <link href="css/menu.css" rel="stylesheet">
+    <!-- endbuild -->
+    
     <title>Le Chocolat</title>
 </head>
 
@@ -97,6 +101,106 @@
         </div>
     </div>
 
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve your baskets </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group row">
+                            <div class="col-12 col-sm-3">
+                                Number of baskets
+                            </div>
+                            <div class="col-12 col-sm-9">
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
+                                        value="option1">
+                                    <label class="form-check-label" for="inlineRadio1">1</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                                        value="option2">
+                                    <label class="form-check-label" for="inlineRadio2">2</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3"
+                                        value="option3">
+                                    <label class="form-check-label" for="inlineRadio3">3</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4"
+                                        value="option4">
+                                    <label class="form-check-label" for="inlineRadio4">4</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5"
+                                        value="option5">
+                                    <label class="form-check-label" for="inlineRadio5">5</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6"
+                                        value="option6">
+                                    <label class="form-check-label" for="inlineRadio6">6</label>
+                                </div>
+
+                            </div>
+
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-12 col-sm-3">
+                                Date and Time
+                            </div>
+                            <div class="input-group col-12 col-sm-4">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text" id="date">
+                                        <i class="fa fa-calendar" aria -hidden="true"></i>
+                                    </span>
+                                </div>
+                                <input type="date">
+                            </div>
+                            <div class="input-group col-12 col-sm-5">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text" id="time">
+                                        <i class="fa fa-clock-o" aria -hidden="true"></i>
+                                    </span>
+                                </div>
+                                <input type="time">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-12 col-sm-3">
+                                Home Delivery
+                            </div>
+                            <div class="col-12 col-sm-9">
+                                <div class="btn-group" data-toggle="buttons">
+                                    <label class="btn btn-success active">
+                                        <input type="radio" name="section" id="section-non-smocking" autocomplete="off"
+                                            checked> Yes
+                                    </label>
+                                    <label class="btn btn-danger">
+                                        <input type="radio" name="section" id="section-smocking" autocomplete="off"
+                                         >No
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel
+                    </button>
+                    <button type="submit" class="btn btn-primary btn-sm">
+                        Submit
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    
     <!-- HEADER -->
     <header class="jumbotron">
         <div class="container">
@@ -116,8 +220,8 @@
 
                 <!-- RESERVE YOUR BASKETS -->
                 <div class="col col-sm-2">
-                    <a type="button" class="btn btn-warning btn-sm btn-block" data-toggle="tooltip" data-html="true"
-                        title="Or Call us at <br><strong>+ 987 6543 2100</strong>" data-placement="bottom" href="#bskt">
+                    <a type="button" class="btn btn-warning btn-sm btn-block" data-html="true"
+                        title="Or Call us at <br><strong>+ 987 6543 2100</strong>" data-placement="bottom" data-toggle="modal" data-target="#reserveModal">
                         Reserve your baskets
                     </a>
                 </div>
@@ -272,7 +376,7 @@
         </div>
 
         <!--4th row-->
-        <div class="row row-content justify-content-center align-items-center" id="bskt">
+        <!-- <div class="row row-content justify-content-center align-items-center" id="bskt">
             <div class="col col-sm-8 col-12 ">
                 <div class="card mb-3">
                     <div class="card-header bg-warning">Reserve your baskets</div>
@@ -345,7 +449,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 
 
@@ -401,11 +505,13 @@
     </footer>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
+    <!-- build:js js/main.js -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/tether/dist/js/tether.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
+     <!-- endbuild -->
     <!-- <script>
         $(function () {
             $('[data-toggle="tooltip"]').tooltip()
